--- a/cookie-monster/index.html
+++ b/cookie-monster/index.html
@@ -16,7 +16,7 @@
 	<div id="container">
 	<!-- START HERE --> 
 
-<h1>Cookie Monster</h1>
+<h1>Cookie Monster by Kithmina</h1>
 <h2>Chocolate Chip Evangelist</h2>
 
 <p>
